...
						backgroundColor: "red",
						justifyContent: "center",
						alignItems: "center",
					}}
				>
					<Text style={{ color: "white" }}>
						Render Error: {this.state.error?.message}
					</Text>
				</View>
			);
		}
		return this.props.children;
	}
...
